--- a/index.html
+++ b/index.html
@@ -24,37 +24,19 @@
   <div class="container">
     <!-- 3x3 grid -->
     <div class="row">
-      <div class="boxes col-sm-4">
-
-      </div>
-      <div class="boxes col-sm-4">
-
-      </div>
-      <div class="boxes col-sm-4">
-
-      </div>
+      <div class="boxes col-sm-4"></div>
+      <div class="boxes col-sm-4"></div>
+      <div class="boxes col-sm-4"></div>
     </div>
     <div class="row">
-      <div class="boxes col-sm-4">
-
-      </div>
-      <div class="boxes col-sm-4">
-
-      </div>
-      <div class="boxes col-sm-4">
-
-      </div>
+      <div class="boxes col-sm-4"></div>
+      <div class="boxes col-sm-4"></div>
+      <div class="boxes col-sm-4"></div>
     </div>
     <div class="row">
-      <div class="boxes col-sm-4">
-
-      </div>
-      <div class="boxes col-sm-4">
-
-      </div>
-      <div class="boxes col-sm-4">
-
-      </div>
+      <div class="boxes col-sm-4"></div>
+      <div class="boxes col-sm-4"></div>
+      <div class="boxes col-sm-4"></div>
     </div>
 
   </div>
